--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: any
   modal_progress_hud_nsn: ^0.5.1
   intl: ^0.20.2
+  flutter_swipe_action_cell: ^3.1.5
 
 dev_dependencies:
   flutter_test:
